Forgot to actually commit the code

--- a/BarcodeScanner/Base.lproj/Main.storyboard
+++ b/BarcodeScanner/Base.lproj/Main.storyboard
@@ -1,24 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BarcodeScanner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csK-0S-yh3" customClass="CameraView" customModule="BarcodeScanner" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PMI-WN-JKu">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.40000000000000002" green="1" blue="1" alpha="0.12147253787878788" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="PMI-WN-JKu" secondAttribute="trailing" id="6X4-Re-4qc"/>
+                            <constraint firstItem="csK-0S-yh3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6dN-Lc-dTo"/>
+                            <constraint firstAttribute="bottom" secondItem="PMI-WN-JKu" secondAttribute="bottom" id="Mmm-69-LiD"/>
+                            <constraint firstItem="csK-0S-yh3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VKu-Le-seb"/>
+                            <constraint firstItem="PMI-WN-JKu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YTM-sK-DDG"/>
+                            <constraint firstAttribute="bottom" secondItem="csK-0S-yh3" secondAttribute="bottom" id="tgV-cv-6d5"/>
+                            <constraint firstItem="PMI-WN-JKu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yv2-mu-PwV"/>
+                            <constraint firstAttribute="trailing" secondItem="csK-0S-yh3" secondAttribute="trailing" id="zlJ-aa-BO6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cameraView" destination="csK-0S-yh3" id="mTD-Sl-RLn"/>
+                        <outlet property="drawingView" destination="PMI-WN-JKu" id="cWQ-su-iQS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-201.44927536231884" y="114.50892857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
